--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="A nice looking serial terminal in the web. Open-Source, free, and easy to use." />
-  <meta name="keywords" content="Web Serial, Serial Terminal, Serial Monitor, Spacehuhn" />
-  <meta name="author" content="Spacehuhn" />
+  <meta name="theme-color" content="#FF6EC7">
+  <meta name="description" content="I heard smol">
+  <meta property="og:site_name" content="ShineBright.dev">
+  <meta property="og:title" content="SlimeVR Serial Terminal">
+  <meta property="og:description" content="I heard smol">
+  <meta property="og:image" content="https://cdn.shinebright.dev/content/nya_umu.png">
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="googlebot" content="noindex, nofollow">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="icon" href="%PUBLIC_URL%/logo512.png" />
   <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css" />
-  <title>Spacehuhn Serial Terminal</title>
+  <title>SlimeVR Serial Terminal</title>
 </head>
 
 <body>
