Renamed to Serial Console

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#FF6EC7">
   <meta name="description" content="I heard smol">
   <meta property="og:site_name" content="ShineBright.dev">
-  <meta property="og:title" content="SlimeVR Serial Terminal">
+  <meta property="og:title" content="SlimeVR Serial Console">
   <meta property="og:description" content="I heard smol">
   <meta property="og:image" content="https://cdn.shinebright.dev/content/nya_umu.png">
   <meta name="robots" content="noindex, nofollow">
@@ -15,7 +15,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="icon" href="%PUBLIC_URL%/logo512.png" />
   <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css" />
-  <title>SlimeVR Serial Terminal</title>
+  <title>SlimeVR Serial Console</title>
 </head>
 
 <body>
